# text-to-sql-eval

./: .env.sample  .gitignore  README.md  baseline.py  docker-compose.yml  init.sh  main.py  pgai.py  pyproject.toml
.github/actions/setup-pgai/: action.yml
.github/workflows/: run.yml
datasets/bird/databases/: california_schools-examples.yaml  california_schools.yaml  card_games-examples.yaml  card_games.part002.sql  card_games.part003.sql  card_games.yaml  codebase_community-examples.yaml  codebase_community.part005.sql  codebase_community.yaml  debit_card_specializing-examples.yaml  debit_card_specializing.yaml  european_football_2-examples.yaml  european_football_2.yaml  financial-examples.yaml  financial.yaml  formula_1-examples.yaml  formula_1.yaml  student_club-examples.yaml  student_club.yaml  superhero-examples.yaml  superhero.sql  superhero.yaml  thrombosis_prediction-examples.yaml  thrombosis_prediction.yaml  toxicology-examples.yaml  toxicology.sql  toxicology.yaml
datasets/postgres_air/: databases.json  setup.sh
datasets/postgres_air/databases/: postgres_air.yaml
datasets/simple/databases/: world.sql
datasets/spider/: README.md
datasets/spider/databases/: academic.sql  geo.sql  geo.yaml  restaurants.sql  yelp.sql  (+2 more)
scripts/: bird_mini_setup.py  defog_condense.py  explain.py  remove_evals.py  setup_db.py  spider_convert.py  spider_questions.py  split_file.py  split_sql_file.py  strip_postgres_dump.py  validate_golden_queries.py
suite/: __main__.py  exceptions.py  main.py  types.py  utils.py
suite/agents/: __init__.py  baseline.py  pgai.py  types.py  vn.py
suite/eval_site/: __init__.py  database.py
suite/tasks/: get_tables.py  text_to_sql.py
tasks/: get_tables.py  text_to_sql.py
tests/tasks/: test_text_to_sql.py
(+2178 files in other folders)
