[project]
name = "text-to-sql-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.56.1",
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.10.3",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.1",
]
