[project]
name = "text-to-sql-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "flask>=3.1.0",
    "langchain-huggingface>=0.1.2",
    "openai>=1.56.1",
    "pgai",
    "polars>=1.29.0",
    "psycopg-pool>=3.2.6",
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.10.3",
    "pydantic-ai>=0.1.7",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "simplejson>=3.20.1",
    "sql-metadata>=2.17.0",
    "sqlglot>=26.16.4",
    "timeout-decorator>=0.5.0",
    "vanna[anthropic,openai,pgvector,postgres]>=0.7.9",
]

[dependency-groups]
dev = [
    "ruff>=0.8.1",
]

[tool.ruff.lint]
extend-select = ["B", "I"]

[tool.uv.sources]
pgai = { path = "../pgai/projects/pgai", editable = true }
